Add missing copy constructor for SimpleNameClassification